Add create task screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --color-light-grey: #F0f0f0;
+  --color-border-custom: #909090;
+  --color-danger: #c51818;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
